# sh-alias-sudo-manager

./: Makefile  README.md  project_layout.txt  pyproject.toml  setup.py
.github/workflows/: ci.yaml
bash_alias_sudo_manager/: cli.py
sh_alias_sudo_manager/: cli.py
tests/: test_cli.py  test_safety.py
